Cria validação de email

--- a/frontend/src/app/components/navbar/navbar.html
+++ b/frontend/src/app/components/navbar/navbar.html
@@ -29,47 +29,63 @@
         class="absolute right-2 top-1/2 -translate-y-1/2 text-white border-2 border-blue-secundary bg-blue-primary hover:bg-blue-hover font-medium rounded-full text-sm px-4 py-1 transition-colors duration-200">
         Buscar
       </button>
-
     </form>
 
-    <div class="flex items-center space-x-3">
-      <button class="max-w-10 max-h-10 relative" routerLink="/carrinho" routerLinkActive="active"> 
-      <i class="fas fa-cart-shopping text-white text-xl"></i>
+    <div class="flex items-center space-x-3 relative">
+      <button class="max-w-10 max-h-10 relative" routerLink="/carrinho" routerLinkActive="active">
+        <i class="fas fa-cart-shopping text-white text-xl"></i>
 
         @if (quantidadeCarrinho > 0) {
-          <span class="absolute top-0 right-0 transform translate-x-1/2 -translate-y-1/2 bg-red-600 text-white text-xs font-bold px-2 py-0.5 rounded-full border-2 border-white">
-            {{ quantidadeCarrinho }}
-          </span>
+        <span
+          class="absolute top-0 right-0 transform translate-x-1/2 -translate-y-1/2 bg-red-600 text-white text-xs font-bold px-2 py-0.5 rounded-full border-2 border-white">
+          {{ quantidadeCarrinho }}
+        </span>
         }
       </button>
-    <button class="flex text-sm rounded-full focus:ring-4 focus:ring-green-light md:me-0" id="user-menu-button" aria-expanded="false" data-dropdown-toggle="user-dropdown" data-dropdown-placement="bottom">
-        <img class="w-10 h-10 rounded-full" src="/assets/perfil_not_found.png" alt="user photo">
-      </button>
-      <div id="user-dropdown" class="z-50 hidden my-4 text-base list-none bg-gray-600 rounded-lg shadow-sm">
-        <div class="px-4 py-3">
-          @if (usuarioLogado !== null) {
-            <span class="block text-sm text-gray-200">{{ usuarioLogado!.nome }}</span>
-            <span class="block text-sm truncate text-gray-400">{{ usuarioLogado!.email }}</span> 
-          } @else {
-            <span class="block text-sm text-gray-200"> Usuário </span>
-            <span class="block text-sm truncate text-gray-400">Logue no nosso sistema!</span> 
-          }
-           
-        </div>
-        <ul class="py-2" aria-labelledby="user-menu-button">
-          @if (isVendedor) {
-            <li>
-            <a routerLink="/painel" class="block px-4 py-2 text-sm text-gray-200 hover:bg-gray-400">Área do vendedor</a>
-          </li>
-          }
-          
-          <li>
-            <a (click)="logout()" class="block px-4 py-2 text-sm text-gray-200 hover:bg-gray-400 ">Sair</a>
-          </li>
-        </ul>
-      </div>
-    </div>
+      <div class="relative inline-block">
+        <button (click)="isDropdownOpen = !isDropdownOpen"
+          class="flex text-sm rounded-full focus:ring-4 focus:ring-green-light md:me-0">
+          <img class="w-10 h-10 rounded-full" src="/assets/perfil_not_found.png" alt="user photo">
+        </button>
 
+        @if (isDropdownOpen) {
+        <div class="absolute right-0 top-full mt-2 z-50 w-48 text-base bg-gray-600 rounded-lg shadow-sm">
+          <div class="px-4 py-3">
+            @if (usuarioLogado !== null) {
+            <span class="block text-sm text-gray-200">{{ usuarioLogado!.nome }}</span>
+            <span class="block text-sm truncate text-gray-400">{{ usuarioLogado!.email }}</span>
+            } @else {
+            <span class="block text-sm text-gray-200">Usuário</span>
+            <span class="block text-sm truncate text-gray-400">Logue no nosso sistema!</span>
+            }
+          </div>
+
+          <ul class="py-2">
+            @if (isVendedor) {
+            <li>
+              <a routerLink="/painel" (click)="isDropdownOpen = false"
+                class="block px-4 py-2 text-sm text-gray-200 hover:bg-gray-400 cursor-pointer">
+                Área do vendedor
+              </a>
+            </li>
+            }
+            <!--
+            <li>
+              <a class="block px-4 py-2 text-sm text-gray-200 hover:bg-gray-400 cursor-pointer">Trocar imagem de perfil</a>
+            </li>
+          -->
+            <li>
+              <a (click)="logout()" class="block px-4 py-2 text-sm text-gray-200 hover:bg-gray-400 cursor-pointer">
+                Sair
+              </a>
+            </li>
+          </ul>
+        </div>
+        }
+      </div>
+
+
+    </div>
 
   </div>
 </nav>
