--- a/frontend/src/app/pages/area-vendedor/painel/painel.component.html
+++ b/frontend/src/app/pages/area-vendedor/painel/painel.component.html
@@ -1,34 +1,36 @@
 <div class="flex flex-col min-h-screen">
+  <app-navbar></app-navbar>
 
-  <header>
-      <app-navbar></app-navbar>
-
-  </header>
 
   <div class="flex flex-1 w-full overflow-hidden">
 
-    <aside class="md:w-1/6 w-full  bg-gray-100 p-5 border-r border-gray-200 flex flex-col">
+    <aside class="md:w-1/6 w-full bg-white p-5 border-r border-gray-200 flex flex-col">
       <div class="text-2xl font-bold text-center py-4  mb-6 border-gray-200 text-green-primary">
         Área do Produtor
       </div>
       <nav class="flex flex-col space-y-2">
-        <a routerLink="/painel/dashboard" [routerLinkActive]="activeLinkClasses" class="p-4 rounded text-xl text-gray-700 hover:text-green-primary">
+        <a routerLink="/painel/dashboard" [routerLinkActive]="activeLinkClasses"
+          class="p-4 rounded text-xl text-gray-700 hover:text-green-primary">
           <i class="fa-solid fa-gauge-high mr-2"></i>
           Dashboard
         </a>
-        <a routerLink="/painel/cadastrar" [routerLinkActive]="activeLinkClasses" class="p-4 rounded text-xl text-gray-700 hover:text-green-primary">
+        <a routerLink="/painel/cadastrar" [routerLinkActive]="activeLinkClasses"
+          class="p-4 rounded text-xl text-gray-700 hover:text-green-primary">
           <i class="fas fa-plus mr-2"></i>
           Cadastrar Produto
         </a>
-        <a routerLink="/painel/pedidos" [routerLinkActive]="activeLinkClasses" class="p-4 rounded text-xl text-gray-700 hover:text-green-primary">
+        <a routerLink="/painel/pedidos" [routerLinkActive]="activeLinkClasses"
+          class="p-4 rounded text-xl text-gray-700 hover:text-green-primary">
           <i class="fa-solid fa-boxes-stacked mr-2"></i>
           Pedidos
         </a>
-        <a routerLink="/painel/vitrine" [routerLinkActive]="activeLinkClasses" class="p-4 rounded text-xl text-gray-700 hover:text-green-primary">
+        <a routerLink="/painel/vitrine" [routerLinkActive]="activeLinkClasses"
+          class="p-4 rounded text-xl text-gray-700 hover:text-green-primary">
           <i class="fa-solid fa-bag-shopping mr-2"></i>
           Vitrine
         </a>
-        <a routerLink="/home" [routerLinkActive]="activeLinkClasses" class="p-4 rounded text-xl text-gray-700 hover:text-red-400 mt-auto">
+        <a routerLink="/home" [routerLinkActive]="activeLinkClasses"
+          class="p-4 rounded text-xl text-gray-700 hover:text-red-400 mt-auto">
           <i class="fa-solid fa-arrow-right-from-bracket mr-2"></i>
           Sair
         </a>
