--- a/frontend/src/app/pages/auth/register/register.html
+++ b/frontend/src/app/pages/auth/register/register.html
@@ -2,32 +2,23 @@
   class="bg-[url('/assets/bgRegistreHortLink.png')] bg-no-repeat bg-cover bg-center h-screen w-full flex items-center justify-center">
   <div
     class="w-full max-w-lg p-4 bg-white border border-gray-200 rounded-lg shadow-sm sm:p-6 md:p-8 dark:bg-gray-800 dark:border-gray-700">
-    <form class="space-y-6" #registerForm="ngForm" (ngSubmit)="onSubmit()">
+    <form class="space-y-6" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
       <h3 class="text-2xl font-medium text-gray-900 dark:text-white text-center">Registre-se</h3>
 
       <div class="flex gap-4">
         <div class="flex-1">
           <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Seu nome</label>
-          <input type="text" name="nome" id="name"
+          <input type="text" name="nome" id="name" formControlName="nome"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
-            placeholder="Nome" #nome="ngModel" [(ngModel)]="usuario.nome" required /> 
-            <div class="text-red-500">
-              @if(nome.errors?.['required']) {
-                  <span class="text-xs">Campo obrigatório*</span>
-              }
-            </div>
+            placeholder="Nome"/> 
+            <app-validation-message [control]="registerForm.controls.nome"></app-validation-message>
         </div>
         <div class="flex-1">
           <label for="phone" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Celular</label>
           <input type="tel" id="phone" mask="(00) 0000-0000||(00) 00000-0000" name="telefone"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-            placeholder="(00) 00000-0000" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" #telefone="ngModel" [(ngModel)]="usuario.telefone"
-            required />
-            <div class="text-red-500">
-              @if(telefone.errors?.['required']) {
-                  <span class="text-xs">Campo obrigatório*</span>
-              }
-            </div>
+            placeholder="(00) 00000-0000" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" formControlName="telefone"/>
+            <app-validation-message [control]="registerForm.controls.telefone"></app-validation-message>
         </div>
       </div>
 
@@ -35,33 +26,36 @@
         <label for="role" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Tipo de conta</label>
         <select id="role" name="role"
           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-          [(ngModel)]="usuario.role" required>
+          formControlName="role">
           <option [ngValue]="null" disabled>Selecione um tipo de conta</option>
           <option value="CONSUMIDOR">Consumidor</option>
           <option value="PRODUTOR">Produtor</option>
           <option value="COMERCIO">Comércio</option>
         </select>
+        <app-validation-message [control]="registerForm.controls.role"></app-validation-message>
       </div>
 
       <div>
         <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Seu email</label>
         <input type="email" name="email" id="email"
           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
-          placeholder="nome@gmail.com" [(ngModel)]="usuario.email" required />
+          formControlName="email"/>
+          <app-validation-message [control]="registerForm.controls.email"></app-validation-message>
       </div>
 
       <div>
-        <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Sua senha</label>
-        <input type="password" name="senha" id="password" placeholder="••••••••"
+        <label for="senha" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Sua senha</label>
+        <input type="password" name="senha" id="senha" placeholder="••••••••"
           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
-          [(ngModel)]="usuario.senha" required />
+          formControlName="senha"/>
+          <app-validation-message [control]="registerForm.controls.senha"></app-validation-message>
       </div>
 
       <div>
         <label for="confirmarSenha" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Confirme sua senha</label>
         <input type="password" name="confirmarSenha" id="confirmarSenha" placeholder="••••••••"
           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
-          [(ngModel)]="usuario.senha" required />
+          formControlName="confirmarSenha"/>
       </div>
 
       <button type="submit"
