--- a/frontend/src/app/pages/area-vendedor/painel/dashboard/dashboard.html
+++ b/frontend/src/app/pages/area-vendedor/painel/dashboard/dashboard.html
@@ -1,1 +1,95 @@
-<p>dashboard works!</p>
+@if (!isLoading && dados) {
+<div class="p-4">
+
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mb-8">
+
+        <div class="rounded-md bg-green-primary text-gray-100 px-4 py-2">
+            <p-card header="Faturamento (Mês)">
+                <p class="text-3xl font-bold text-gray-100">
+                    {{ dados.faturamentoMes | currency:'BRL' }}
+                </p>
+            </p-card>
+        </div>
+
+
+        <div class="rounded-md bg-gray-400 text-gray-100 px-4 py-2">
+            <p-card header="Pedidos (Mês)">
+                <p class="text-3xl font-bold">
+                    {{ dados.pedidosMes }}
+                </p>
+            </p-card>
+        </div>
+
+        <div class="rounded-md bg-gray-600 text-gray-100 px-4 py-2">
+            <p-card header="Ticket Médio">
+                <p class="text-3xl font-bold">
+                    {{ dados.ticketMedio | currency:'BRL' }}
+                </p>
+            </p-card>
+        </div>
+
+        <div class="rounded-md bg-amber-300 text-gray-100 px-4 py-2">
+            <p-card header="Pedidos Pendentes">
+                <p class="text-3xl font-bold">
+                    {{ dados.pedidosPendentes }}
+                </p>
+            </p-card>
+        </div>
+
+    </div>
+  <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
+
+    <div class="lg:col-span-2">
+        <div class="bg-white rounded-md shadow-sm p-6">
+            <p-card header="Vendas (Últimos 7 Dias)" [styleClass]="'shadow-md rounded-lg'">
+        <p-chart type="bar" [data]="chartData" [options]="chartOptions">
+        </p-chart>
+      </p-card>
+        </div>
+      
+    </div>
+
+    <div class="lg:col-span-1">
+        <div class="bg-white rounded-md shadow-sm p-4">
+      <p-card>
+        <ng-template pTemplate="header">
+          <div class="p-4 bg-blue-secundary rounded-t-lg ">
+            <h3 class="text-lg font-semibold text-gray-100">Top 5 Produtos</h3>
+          </div>
+        </ng-template>
+
+        <p-table 
+          [value]="dados.top5Produtos" 
+          styleClass="w-full"
+          [tableStyle]="{'border-collapse': 'separate', 'border-spacing': '0 0.8rem'}">
+          
+          <ng-template pTemplate="header">
+            <tr>
+              <th class="text-md font-lg text-gray-700">Produto</th>
+              <th class="text-md font-lg">Qtd. Vendida</th>
+            </tr>
+          </ng-template>
+
+          <ng-template pTemplate="body" let-produto>
+            <tr class="bg-gray-50/70 shadow-sm">
+              <td class="p-3 text-sm text-gray-700 font-medium">
+                {{ produto.nomeProduto }}
+              </td>
+              <td class="p-3 text-sm text-gray-900 font-semibold text-right">
+                {{ produto.quantidadeVendida }}
+              </td>
+            </tr>
+          </ng-template>
+        </p-table>
+      </p-card>
+    </div>
+    </div>
+
+  </div>
+</div>
+} @else {
+  <div class="flex justify-center items-center p-8">
+    <i class="pi pi-spin pi-spinner" style="font-size: 2rem"></i>
+    <span class="ml-2">Carregando dashboard...</span>
+  </div>
+}
