Cria a validação de um comércio

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,5 +1,6 @@
 <a routerLink="/login"></a>
 <a routerLink="/register"></a>
 <a routerLink="/carrinho"></a>
+<a routerLink="/completar-cadastro"></a>
 
 <router-outlet />
