--- a/frontend/src/app/pages/area-vendedor/painel/vitrine/vitrine.html
+++ b/frontend/src/app/pages/area-vendedor/painel/vitrine/vitrine.html
@@ -1,1 +1,10 @@
-<p>vitrine works!</p>
+  <section class="flex flex-col items-center justify-center text-center mx-auto mt-20 max-w-md gap-4">
+    <h4 class="text-3xl font-semibold text-neutral-700">Esta área ainda está em desenvolvimento.</h4>
+    <span class="text-md text-neutral-500">Estamos trabalhando para liberar este recurso em breve.</span>
+
+    <button routerLink="/home"
+      class="w-full cursor-pointer text-xl bg-green-light hover:bg-green-primary rounded-md text-white py-4 transition-all">
+      <i class="fas fa-cart-shopping mr-2"></i>
+      CONTINUAR COMPRANDO
+    </button>
+  </section>
