--- a/frontend/src/app/pages/auth/register/register.html
+++ b/frontend/src/app/pages/auth/register/register.html
@@ -10,15 +10,17 @@
           <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Seu nome</label>
           <input type="text" name="nome" id="name" formControlName="nome"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
-            placeholder="Nome"/> 
-            <app-validation-message [control]="registerForm.controls.nome"></app-validation-message>
+            placeholder="Nome" />
+          <app-validation-message [control]="registerForm.controls.nome"></app-validation-message>
         </div>
         <div class="flex-1">
           <label for="phone" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Celular</label>
-          <input type="tel" id="phone" mask="(00) 0000-0000||(00) 00000-0000" name="telefone"
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-            placeholder="(00) 00000-0000" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" formControlName="telefone"/>
-            <app-validation-message [control]="registerForm.controls.telefone"></app-validation-message>
+          <input type="tel" id="phone" name="telefone" mask="(00) 0000-0000||(00) 00000-0000"
+            placeholder="(00) 00000-0000" formControlName="telefone" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg 
+              focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5
+              dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 
+              dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" />
+          <app-validation-message [control]="registerForm.controls.telefone"></app-validation-message>
         </div>
       </div>
 
@@ -39,28 +41,32 @@
         <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Seu email</label>
         <input type="email" name="email" id="email"
           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
-          formControlName="email"/>
-          <app-validation-message [control]="registerForm.controls.email"></app-validation-message>
+          formControlName="email" />
+        <app-validation-message [control]="registerForm.controls.email"></app-validation-message>
       </div>
 
       <div>
         <label for="senha" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Sua senha</label>
         <input type="password" name="senha" id="senha" placeholder="••••••••"
           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
-          formControlName="senha"/>
-          <app-validation-message [control]="registerForm.controls.senha"></app-validation-message>
+          formControlName="senha" />
+        <app-validation-message [control]="registerForm.controls.senha"></app-validation-message>
       </div>
 
       <div>
-        <label for="confirmarSenha" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Confirme sua senha</label>
+        <label for="confirmarSenha" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Confirme sua
+          senha</label>
         <input type="password" name="confirmarSenha" id="confirmarSenha" placeholder="••••••••"
           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
-          formControlName="confirmarSenha"/>
+          formControlName="confirmarSenha" />
+          <app-validation-message 
+        [control]="registerForm"
+        controlName="senhasDiferentes">
+      </app-validation-message>
       </div>
 
       <button type="submit"
-        class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-        >
+        class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
         Registre-se
       </button>
 
