--- a/frontend/src/app/pages/home/home.html
+++ b/frontend/src/app/pages/home/home.html
@@ -4,6 +4,13 @@
 
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 
+    @if(usuarioLogado?.cadastroIncompleto) {
+      <div class="bg-yellow-100 text-yellow-800 p-4 rounded-md mt-4 text-md">
+      <strong>⚠️ Seu cadastro está incompleto.</strong>  
+      Finalize seu cadastro para liberar todas as funcionalidades.
+    </div>
+    }
+
     <h2 class="text-4xl text-green-light font-semibold my-10">Produtos em destaque</h2>
 
     <div class="grid grid-cols-4 gap-8">
