--- a/frontend/src/app/pages/completar-cadastro/completar-cadastro.html
+++ b/frontend/src/app/pages/completar-cadastro/completar-cadastro.html
@@ -8,7 +8,7 @@
             <div class="p-6 border-b border-gray-200">
                 <h4 class="text-xl font-medium text-green-primary">
 
-                    <a routerLink="/" class="text-current transition-opacity hover:opacity-75"
+                    <a routerLink="/home" class="text-current transition-opacity hover:opacity-75"
                         aria-label="Voltar para a página inicial">
 
                         <i class="fas fa-arrow-left mr-4"></i>
@@ -74,12 +74,12 @@
                     </div>
 
                     <div class="col-span-6 sm:col-span-4">
-                        <label for="complemento" class="block text-sm font-medium text-gray-700 mb-1">
-                            Complemento
+                        <label for="bairro" class="block text-sm font-medium text-gray-700 mb-1">
+                            bairro
                         </label>
-                        <input type="text" id="complemento" formControlName="complemento"
+                        <input type="text" id="bairro" formControlName="bairro"
                             class="block w-full rounded-md border-gray-300 shadow-sm focus:border-green-primary focus:ring-green-primary sm:text-sm">
-                        <app-validation-message [control]="comercioForm.controls.complemento"></app-validation-message>
+                        <app-validation-message [control]="comercioForm.controls.bairro"></app-validation-message>
                     </div>
 
 
@@ -108,6 +108,15 @@
                         </select>
 
                         <app-validation-message [control]="comercioForm.controls.estado"></app-validation-message>
+                    </div>
+
+                    <div class="col-span-6 sm:col-span-4">
+                        <label for="complemento" class="block text-sm font-medium text-gray-700 mb-1">
+                            Complemento
+                        </label>
+                        <input type="text" id="complemento" formControlName="complemento"
+                            class="block w-full rounded-md border-gray-300 shadow-sm focus:border-green-primary focus:ring-green-primary sm:text-sm">
+                        <app-validation-message [control]="comercioForm.controls.complemento"></app-validation-message>
                     </div>
 
                 </div>
