--- a/frontend/src/app/pages/home/home.html
+++ b/frontend/src/app/pages/home/home.html
@@ -17,7 +17,7 @@
       @for (produto of produtos; track $index) {
       <div class="bg-white shadow-lg overflow-hidden rounded-3xl">
         <div class="h-48">
-          <img [src]="produto.imagemUrl" class="w-full h-full object-cover" alt="Produto">
+          <img [src]="produto.imageUrl" class="w-full h-full object-cover" alt="Produto">
         </div>
         <div class="p-4">
           <h3 class="font-medium text-lg">{{produto.nome}}</h3>
