--- a/frontend/src/app/pages/area-vendedor/painel/vitrine/vitrine.html
+++ b/frontend/src/app/pages/area-vendedor/painel/vitrine/vitrine.html
@@ -5,6 +5,6 @@
     <button routerLink="/home"
       class="w-full cursor-pointer text-xl bg-green-light hover:bg-green-primary rounded-md text-white py-4 transition-all">
       <i class="fas fa-cart-shopping mr-2"></i>
-      CONTINUAR COMPRANDO
+      Voltar ao home
     </button>
   </section>
