--- a/frontend/src/app/pages/carrinho/carrinho.html
+++ b/frontend/src/app/pages/carrinho/carrinho.html
@@ -19,7 +19,7 @@
         @for (produto of produtos; track $index) {
         <div class="flex items-center p-4 border-t border-b border-gray-300">
           <div class="w-28 shrink-0">
-            <img [src]="produto.imagemUrl" class="w-24 h-24 object-cover rounded-md" alt="Produto">
+            <img [src]="produto.imageUrl" class="w-24 h-24 object-cover rounded-md" alt="Produto">
           </div>
 
           <div class="flex-1 ml-4">
